^style refactor almost finished

--- a/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
+++ b/web/themes/custom/buddy_bt4/templates/layout/page.html.twig
@@ -71,7 +71,7 @@
             Menu
           </button>
         </div>
-        <div class="collapse navbar-collapse col-10 col-md-auto p-0 justify-content-end" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse col-10 p-0 justify-content-end" id="navbarSupportedContent">
           {{ page.nav_main }}
           {{ page.nav_additional }}
         </div>
