--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -228,7 +228,19 @@ body {
   font-family: 'Noto Sans',sans-serif;
   font-size: 22px;
   font-weight: 400;
+  background-color: #FCFCFC;
 
+}
+
+#main-bg-img{
+  margin-top: -130px;
+  max-height: 230px;
+  margin-bottom: 20px;
+}
+@media (max-width: 991px) {
+  #main-bg-img{
+    display: none;
+  }
 }
 /* Header */
 
@@ -293,8 +305,8 @@ header {
   }
 }
 .navbar {
-  background-color: white;
-  color: black;
+  background-color: #332865;
+  color: white;
   font-weight: 700;
 }
 .navbar-brand a.site-title{
@@ -306,17 +318,28 @@ header {
 }
 
 header .nav-item a,header .navbar-brand a.site-title{
-  color: black;
+  color: white;
+  border: 3px solid #332865;
+  border-radius: 10px;
 }
+
+.nav-link.active {
+  border-color: white;
+}
+
 
 
 header .navbar-brand a.site-title:hover,
 header .navbar-brand a.site-title:focus{
-  color: black;
+  color: white;
 }
 header .nav-item a:hover,header .nav-item a:focus{
-  background: #B9C9C1;
+  background-color: white;
+  outline: none;
+  color: black;
 }
+
+
 
 .nav-tabs {
   border-bottom: 2px solid #000000;
@@ -324,6 +347,7 @@ header .nav-item a:hover,header .nav-item a:focus{
 .nav-tabs .nav-link {
   border: 2px solid transparent;
 }
+/*
 .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
   color: #495057;
   background-color: #fff;
@@ -332,6 +356,7 @@ header .nav-item a:hover,header .nav-item a:focus{
 .nav-link.active{
   background-color: #9c9cc2;
 }
+*/
 
 .nav-tabs .nav-link {
   margin-bottom: -2px;
@@ -353,6 +378,8 @@ header .nav-item a:hover,header .nav-item a:focus{
 .navbar-expand-lg {
   flex-flow: column;
   justify-content: flex-start;
+  padding: 15px 0;
+
 }
 /*
 .navbar-toggler {
@@ -361,25 +388,28 @@ header .nav-item a:hover,header .nav-item a:focus{
 }
 */
 
+.navbar-expand .navbar-nav .nav-link {
+  margin-right: 10px;
+}
 
 .navbar-toggler-icon {
-  color: #000000;
+  color: #ffffff;
   display: inline-block;
   width: 40px;
   height: 40px;
   vertical-align: middle;
   content: "";
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='4' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20width%3D%2730%27%20height%3D%2730%27%20viewBox%3D%270%200%2030%2030%27%3E%0A%20%20%3Cpath%20stroke%3D%27%23ffffff%27%20stroke-linecap%3D%27round%27%20stroke-miterlimit%3D%2710%27%20stroke-width%3D%274%27%0A%20%20%20%20%20%20%20%20d%3D%27M4%207h22M4%2015h22M4%2023h22%27/%3E%0A%3C/svg%3E");
 }
 
 .search-icon{
-  color: #000000;
+  color: #ffffff;
   display: inline-block;
   width: 40px;
   height: 40px;
   vertical-align: middle;
   content: "";
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='currentColor' d='M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z'%3E%3C/path%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%20512%20512%27%3E%0A%20%20%3Cpath%20fill%3D%27%23ffffff%27%0A%20%20%20%20%20%20%20%20d%3D%27M505%20442.7L405.3%20343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3%2044-79.7%2044-128C416%2093.1%20322.9%200%20208%200S0%2093.1%200%20208s93.1%20208%20208%20208c48.3%200%2092.7-16.4%20128-44v16.3c0%206.4%202.5%2012.5%207%2017l99.7%2099.7c9.4%209.4%2024.6%209.4%2033.9%200l28.3-28.3c9.4-9.4%209.4-24.6.1-34zM208%20336c-70.7%200-128-57.2-128-128%200-70.7%2057.2-128%20128-128%2070.7%200%20128%2057.2%20128%20128%200%2070.7-57.2%20128-128%20128z%27%3E%3C/path%3E%0A%3C/svg%3E");
 
 }
 
@@ -458,19 +488,19 @@ Langauge Switcher
 main{
  /* background-size: cover !important; */
   /* background: url(../assets/svg/buddy_mobile_bg.svg) no-repeat; */
-  background-image: url(../assets/svg/buddy_bg.svg);
+  /*background-image: url(../assets/svg/buddy_bg.svg); */
   font-size: 1.1rem;
   background-repeat:no-repeat;
   background-size:100%;
   background-position: center bottom;
   width:100%;
   margin:0 auto;
-  min-height:700px;
+  min-height: 75vh;
 
 
 }
 
-
+/*
 @media (max-width: 991px) {
 
   main{
@@ -487,6 +517,7 @@ main{
   }
 
 }
+*/
 main a{
   text-decoration: underline;
   color: #0000CE;
@@ -756,8 +787,12 @@ Profile
 }
 /*FOOTER */
 footer.mt-auto{
-  border-top: 10px solid #080866;
+  /*border-top: 10px solid #080866; */
   /* margin-top: -150px !important; */
+
+  background-color: #332865;
+  color: white;
+
 }
 
 .buddy_footer_menu{
@@ -768,7 +803,9 @@ footer.mt-auto{
   font-size: 1.29rem;
 
 }
-
+.buddy_footer_menu a{
+  color: white;
+}
 
 .buddy_footer_menu>li{
   display: inline;
@@ -780,9 +817,7 @@ footer.mt-auto{
 
   }
 }
-.buddy_footer_menu>li a{
-  color: black;
-}
+
 
 /*
 
