--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -233,6 +233,14 @@ body {
   background-color: #FCFCFC;
 
 }
+.at_search_results>ul>li{
+  list-style: none;
+  margin: 0;
+}
+
+.at_search_results>ul{
+  padding-left: 0px;
+}
 
 #main-bg-img{
   margin-top: -130px;
