^recommendation forms updated

--- a/web/themes/custom/buddy_bt4/css/custom.css
+++ b/web/themes/custom/buddy_bt4/css/custom.css
@@ -190,6 +190,14 @@
   list-style: none;
   padding-left: 0;
 }
+.at_detail_list li {
+  margin-top: 10px;
+}
+
+.buddy_rec_info{
+  font-size: 1.3rem;
+  margin: 20px 0;
+}
 
 .li_header{
   display: block;
